--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
     		<<title>Git</title>
+            <link rel="stylesheet" type="text/css" href="/design.css"/>            
     </head>         
     <body>          
         <h1>Git</h1>
